# seedweed

./: .envrc  .flake8  .gitignore  LICENSE-MIT  Makefile  README.md  dev-requirements.txt  example.py  finder.py  pyproject.toml
.github/workflows/: main.yml
data/: test-vectors.csv
seedweed/: __init__.py  conformance.py  reference.py  test-vectors.csv  vectors.py
tests/: test_conformance.py  test_generate.py
